--- a/public/display.html
+++ b/public/display.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.15</title>
+  <title>Laserpointer Display v3.12</title>
   <style>
     body { margin:0; background:black; }
     canvas { display:block; margin:auto; background:black; }
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.15 (smooth dynamic 5–12px)</div>
+  <div id="version">v3.12 (multi-user + smoothing)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
@@ -26,136 +26,130 @@
           CX   = c.width/2,
           CY   = c.height/2;
 
-    // Admin-Overrides
+    // Defaults (werden per Admin überschrieben)
     let MAX_H   = 20,
         MAX_V   = 20,
         SMOOTH  = 0.15;
 
+    // Datenstrukturen pro Gerät
+    const alpha0Map   = {},        // Kalibrier-Nullpunkt alpha
+          beta0Map    = {},        // Kalibrier-Nullpunkt beta
+          rawPos      = {},        // deviceId → { x, y }
+          smoothPos   = {},        // deviceId → { x, y } geglättet
+          lastColor   = {},        // deviceId → color
+          lastLight   = {},        // deviceId → lightness %
+          segments    = [];        // alle Liniensegmente
+
+    ctx.lineCap  = "round";
+    ctx.lineJoin = "round";
+
+    // Admin-Einstellungen live übernehmen
     socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
       if (typeof maxH   === "number") MAX_H  = maxH;
       if (typeof maxV   === "number") MAX_V  = maxV;
       if (typeof smooth === "number") SMOOTH = smooth;
     });
 
-    // State per device
-    const alpha0    = {},
-          beta0     = {},
-          rawPos    = {},
-          lastTime  = {},
-          segments  = [],
-          lastCol   = {},
-          lastLight = {};
-
-    ctx.lineCap  = "round";
-    ctx.lineJoin = "round";
-
-    function parseLight(hsl) {
-      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\)/);
-      return m ? +m[1] : 50;
-    }
-
-    socket.on("clear", () => {
-      segments.length = 0;
-      ctx.clearRect(0,0,c.width,c.height);
-      Object.keys(alpha0).forEach(k=>delete alpha0[k]);
-      Object.keys(beta0).forEach(k=>delete beta0[k]);
-      Object.keys(rawPos).forEach(k=>delete rawPos[k]);
-      Object.keys(lastTime).forEach(k=>delete lastTime[k]);
-      Object.keys(lastCol).forEach(k=>delete lastCol[k]);
-      Object.keys(lastLight).forEach(k=>delete lastLight[k]);
-    });
-
+    // Neue Bewegungsdaten
     socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
-      if (!deviceId || typeof alpha !== "number") return;
-      const now = performance.now();
+      if (!deviceId || typeof alpha!=="number" || typeof beta!=="number") return;
 
-      // Farbe & Helligkeit speichern
-      lastCol[deviceId]   = color;
-      lastLight[deviceId] = parseLight(color);
+      // Lightness aus HSL extrahieren
+      const m = color.match(/hsl\([^,]+,\s*[^,]+,\s*(\d+)%\)/);
+      const light = m ? parseInt(m[1],10) : 50;
+      lastLight[deviceId] = light;
+      lastColor[deviceId] = color;
 
-      // Kalibrierung beim ersten Draw
-      if (isDrawing && !(deviceId in alpha0)) {
-        alpha0[deviceId]    = alpha;
-        beta0 [deviceId]    = beta;
-        rawPos[deviceId]    = { x: CX, y: CY };
-        lastTime[deviceId]  = now;
-        return;
+      // Kalibrierung beim ersten Zeichnen
+      if (isDrawing && !(deviceId in alpha0Map)) {
+        alpha0Map[deviceId] = alpha;
+        beta0Map [deviceId] = beta;
+        rawPos   [deviceId] = { x: CX, y: CY };
+        smoothPos[deviceId] = { x: CX, y: CY };
       }
-      if (!(deviceId in alpha0)) return;
+      if (!(deviceId in alpha0Map)) return;
 
-      // Winkel-Delta + Wrap
-      let dA = alpha - alpha0[deviceId];
+      // Winkel-Delta + Wrap-Around
+      let dA = alpha - alpha0Map[deviceId];
       if (dA > 180)  dA -= 360;
       if (dA < -180) dA += 360;
-      let dB = beta - beta0[deviceId];
+      let dB = beta - beta0Map[deviceId];
 
-      // Clamp
+      // Begrenzen
       dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
       dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // Auf Canvas mappen
+      // Mapping auf Canvas (invertiert)
       const x = CX - (dA / MAX_H) * CX;
       const y = CY - (dB / MAX_V) * CY;
 
-      // Geschwindigkeit px/s
-      const prev = rawPos[deviceId];
-      const dx   = x - prev.x;
-      const dy   = y - prev.y;
-      const dt   = (now - lastTime[deviceId]) / 1000;
-      const speed = dt > 0 ? Math.hypot(dx, dy) / dt : 0;
-
-      // Speichern für nächstes Mal
-      rawPos[deviceId]   = { x, y };
-      lastTime[deviceId] = now;
-
+      // Linien-Segment, falls gezeichnet wird
       if (isDrawing) {
-        // Geschwindigkeit → norm [0..1]
-        const threshold = 2000;
-        const norm = Math.min(1, speed / threshold);
-
-        // Gleiten zwischen min=5px und max=12px
-        const minW = 5, maxW = 12;
-        const w    = maxW - (maxW - minW) * norm;
-
-        segments.push({ x1: prev.x, y1: prev.y, x2: x, y2: y, color, width: w });
+        const prev = rawPos[deviceId];
+        segments.push({
+          x1: prev.x, y1: prev.y,
+          x2: x,      y2: y,
+          color, deviceId
+        });
       }
+
+      // Rohdaten speichern
+      rawPos[deviceId] = { x, y };
     });
 
+    // Canvas löschen
+    socket.on("clear", () => {
+      segments.length = 0;
+      ctx.clearRect(0,0,c.width,c.height);
+      for (let id in rawPos)    delete rawPos[id];
+      for (let id in smoothPos) delete smoothPos[id];
+      for (let id in alpha0Map) delete alpha0Map[id];
+      for (let id in beta0Map)  delete beta0Map[id];
+      for (let id in lastLight) delete lastLight[id];
+    });
+
+    // Puls + Render-Loop
     let pulse = 0, growing = true;
     function render() {
       ctx.clearRect(0,0,c.width,c.height);
 
-      // Alle Segmente zeichnen
+      // 1) Linien zeichnen
       for (const s of segments) {
         ctx.strokeStyle = s.color;
-        ctx.lineWidth   = s.width;
+        ctx.lineWidth   = 6;
         ctx.beginPath();
         ctx.moveTo(s.x1, s.y1);
         ctx.lineTo(s.x2, s.y2);
         ctx.stroke();
       }
 
-      // Puls für Punkt
+      // 2) Punkt-Glättung & Puls
       pulse += growing ? 0.2 : -0.2;
-      if (pulse > 2) growing = false;
-      if (pulse < 0) growing = true;
+      if (pulse > 2)  growing = false;
+      if (pulse < 0)  growing = true;
 
-      // Pulsierende Punkte an allen Geräten
       for (const id in rawPos) {
-        const { x, y } = rawPos[id];
-        const col      = lastCol[id] || "#fff";
-        const lastSeg  = segments.filter(s => s.color === col).slice(-1)[0];
-        const baseW    = lastSeg ? lastSeg.width : (5+12)/2;
-        const r        = baseW/2 + pulse;
+        const target = rawPos[id];
+        const smooth = smoothPos[id] = smoothPos[id] || { x:CX, y:CY };
 
+        // Glätten
+        smooth.x += (target.x - smooth.x) * SMOOTH;
+        smooth.y += (target.y - smooth.y) * SMOOTH;
+
+        const col   = lastColor[id] || "hsl(0,100%,50%)";
+        const light = lastLight[id] || 50;
+        const r     = 4 + pulse;
+
+        // Punkt zeichnen
         ctx.beginPath();
-        ctx.arc(x, y, r, 0, 2 * Math.PI);
+        ctx.arc(smooth.x, smooth.y, r, 0, 2*Math.PI);
         ctx.fillStyle = col;
         ctx.fill();
 
-        if ((lastLight[id] || 50) < 20) {
+        // Weißer Ring bei Low-Light
+        if (light < 20) {
           ctx.beginPath();
-          ctx.arc(x, y, r + 3, 0, 2 * Math.PI);
+          ctx.arc(smooth.x, smooth.y, r + 3, 0, 2*Math.PI);
           ctx.strokeStyle = "#fff";
           ctx.lineWidth   = 3;
           ctx.stroke();
